--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:rISFvS1d06lIgidqloYq@containers-us-west-165.railway.app:6826/railway
+DATABASE_URL=postgresql://postgres:GLnY17LBRAK2wy89xbtT@containers-us-west-131.railway.app:8000/railway
 SECRET_KEY=your_secret_key_here
