--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+ENVIRONMENT=dev
+
 DATABASE_URL=postgresql://postgres:GLnY17LBRAK2wy89xbtT@containers-us-west-131.railway.app:8000/railway
 SECRET_KEY=your_secret_key_here
