--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 ENVIRONMENT=dev
 
-DATABASE_URL=postgresql://postgres:GLnY17LBRAK2wy89xbtT@containers-us-west-131.railway.app:8000/railway
-SECRET_KEY=your_secret_key_here
+DATABASE_URL_SERVER=postgresql://postgres:GLnY17LBRAK2wy89xbtT@containers-us-west-131.railway.app:8000/railway
+DATABASE_URL_DEV=postgresql://postgres:kartik@localhost/lexus
+
